@@ -3,6 +3,8 @@ Version: 3.2.0
 Date: ????
   Features:
     - Alt + click on a recipe with one product to view the product's page
+  Bugfixes:
+    - Fixed that mining drills were not being processed for technology unlocks
 ---------------------------------------------------------------------------------------------------
 Version: 3.1.5
 Date: 2021-09-19
